#3 Customize Start at Line menu item and update documentation